# culling

./: .gitignore  README.md  package-lock.json  package.json  skills-lock.json  sort_faces.py
docs/plans/: 2026-03-31-face-sorting-design.md  2026-03-31-face-sorting-plan.md  2026-04-01-background-enrichment-design.md  2026-04-01-culling-app-design.md  2026-04-01-culling-app-plan.md
skills/: tauri-v2
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  pipeline.rs  project.rs  thumbnailer.rs
src-tauri/src/grader/: aesthetic.rs  heuristics.rs  mod.rs
src-tauri/src/organizer/: export.rs
src-tauri/src/scanner/: cluster.rs  detector.rs  embedder.rs  mod.rs
src/lib/: utils.ts
src/lib/components/: AppShell.svelte  ExportDialog.svelte  Filmstrip.svelte  PhotoViewer.svelte  ShortcutOverlay.svelte  Sidebar.svelte  StatusBar.svelte  ThumbnailProgress.svelte  Toolbar.svelte  WelcomeScreen.svelte
src/lib/stores/: project.ts
src/routes/: +page.svelte
