[package]
name = "culling"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "culling_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
image = "0.25"
nalgebra = "0.33"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
trash = "5"
walkdir = "2"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
zip = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tauri-plugin-webdriver-automation = "0.1.3"

# Optimize all code in dev builds — ONNX inference and image processing
# are unusably slow without optimization. Keep debuginfo for stack traces.
[profile.dev]
opt-level = 2

[profile.dev.package.ort]
opt-level = 3
[profile.dev.package.ndarray]
opt-level = 3

